@@ -8,6 +8,8 @@ Changes to Version 2.1-3
 
   o Fixed conversion of multiple numeric variables to factors (bug reported by Pedro Barbetta).
 
+  o Added dialog to control R.app app nap under OS X Mavericks.
+
 Changes to Version 2.1-2
 
   o Fixed ignoring of Rcmdr option "ask.on.exit" and "ask.to.exit", causing exiting without asking in non-English locales (bug report by Yoshinobu Kanda).
